# realsense-simple-wrapper

./: .gitignore  LICENSE  README.md
cpp/save-to-disk/: CMakeLists.txt  rs-save-to-disk.cpp
doc/: configure_pi4.md  ip
docker/: README.md
docker/realsense/: build.sh  build_all.sh  install_script.sh  run.sh
docker/realsense/dockerfiles/: Dockerfile.U18Realsense  Dockerfile.U20Realsense  Dockerfile.Ubuntu18  Dockerfile.Ubuntu20  Dockerfile.Ubuntu20Compact  Dockerfile.Ubuntu20CompactUVC  Dockerfile.Ubuntu20Full  Dockerfile.Ubuntu20Fullv2.47  Dockerfile.Ubuntu20VTKOpenCVPCL
realsense/: net_viewer.py  realsense_run_devices.py  realsense_wrapper.py
rs-cpp/save-to-disk/: readme.md  rs-save-to-disk.cpp
rs_cpp/rs_callback/: CMakeLists.txt  rs-callback.cpp
rs_cpp/rs_imshow/: CMakeLists.txt  rs-imshow.cpp
rs_cpp/rs_kinfu/: CMakeLists.txt  rs-kinfu.cpp
rs_cpp/rs_run_devices/: CMakeLists.txt  main.cpp  readme.md  rs_args.cpp  rs_args.hpp  rs_run_devices.cpp  rs_utils.cpp  rs_utils.hpp  rs_wrapper.cpp  rs_wrapper.h  rs_wrapper.hpp  utils.cpp  utils.h  utils.hpp
rs_cpp/rs_sandbox/: CMakeLists.txt  rs-sandbox.cpp
rs_cpp/save_to_disk/: CMakeLists.txt  readme.md  rs_save_to_disk.cpp  rs_wrapper.cpp  rs_wrapper.h
rs_py/: __init__.py  cv_aruco.py  cv_calibrate.py  net_viewer.py  realsense_device_manager.py  realsense_run_devices.py  realsense_wrapper.py  rs_check_icudevice_timestamp.py  rs_check_timestamp.py  rs_extract_raw_color_image.py  rs_plot_skeleton_on_depthmap.py  rs_run_devices.py  rs_run_devices_mp.py  rs_view_pcd.py  rs_view_raw_data.py  rs_view_sync_raw_data.py  rs_wrapper.py
rs_py/calibration/: cv_aruco.py
rs_py/utility/: __init__.py  data_collection.py  image_data.py  utils.py
rs_py/wrapper/: __init__.py  realsense_device_manager.py  rs_args.py  rs_utils.py  rs_wrapper.py  rs_wrapper_archiv.py
scripts/: README.md  download_github_repo.sh  install_realsense_pi4.sh  install_realsense_pi4_dev.sh  install_realsense_with_network.sh  pi4_client.sh  pi4_client_bind.sh  pi4_server.sh  unused_programs.sh
